# ep_api

./: .gitignore  CMakeLists.txt  README.md  database.db  docker-compose.yml  main.cpp  methods.txt  run.sh  swagger.yaml  test.py
algo_service/: CMakeLists.txt  Dockerfile
algo_service/src/: CMakeLists.txt  async_request.cpp  async_request.h  atc_puller.cpp  atc_puller.h  cf_puller.cpp  cf_puller.h  coroutine_task.cpp  coroutine_task.h  group.h  main.cpp  message_queue.cpp  message_queue.h  range_setter.h  semester.h  service.cpp  service.h  storage.cpp  storage.h  user.h  utility_functions.cpp  utility_functions.h
api/: CMakeLists.txt  Dockerfile
api/docs/: swagger.yml
api/src/: CMakeLists.txt  main.cpp
api/src/database/: CMakeLists.txt  admin.cpp  admin.h  group.cpp  group.h  message_queue.cpp  message_queue.h  point.cpp  point.h  problem.cpp  problem.h  semester.cpp  semester.h  semester_result.cpp  semester_result.h  session.cpp  session.h  subject_type.h  user.cpp  user.h  validator.cpp  work.cpp  work.h  work_result.cpp  work_result.h
api/src/message_queue/: CMakeLists.txt  message_queue.cpp  message_queue.h
api/src/resources/: CMakeLists.txt  get_solution_resource.cpp  get_solution_resource.h  group_resource.cpp  group_resource.h  point_resource.cpp  point_resource.h  problem_resource.cpp  problem_resource.h  resource.h  root_requirements.cpp  root_requirements.h  semester_resource.cpp  semester_resource.h  semester_result_resource.cpp  semester_result_resource.h  solutions.cpp  solutions.h  user_resource.cpp  user_resource.h  work_resource.cpp  work_resource.h  work_result_resource.cpp  work_result_resource.h
api/src/server/: CMakeLists.txt  server.cpp  server.h
api/src/services/: cf_service.h
api/src/utility/: CMakeLists.txt  crypto.cpp  crypto.h  http_exceptions.h  random_functions.cpp  random_functions.h  request.cpp  str.h  types.h  utility_functions.cpp  utility_functions.h
auth_service/: CMakeLists.txt  Dockerfile
auth_service/src/: CMakeLists.txt  auth_service.cpp  auth_service.h  crypto.cpp  crypto.h  main.cpp
src/: CMakeLists.txt
src/database/: CMakeLists.txt  checker.cpp  checker.h  group.cpp  group.h  point.cpp  point.h  problem.cpp  problem.h  semester.cpp  semester.h  semester_result.cpp  semester_result.h  session.cpp  session.h  subject_type.cpp  subject_type.h  test.h  user.cpp  user.h  validator.cpp  validator.h  work.cpp  work.h  work_result.cpp  work_result.h
src/resources/: CMakeLists.txt  admin_resource.cpp  admin_resource.h  get_solution_resource.cpp  get_solution_resource.h  group_resource.cpp  group_resource.h  group_resources.cpp  group_resources.h  point_resource.cpp  point_resource.h  problem_resource.cpp  problem_resource.h  resource.cpp  resource.h  root_requirements.cpp  root_requirements.h  semester_resource.cpp  semester_result_resource.cpp  semester_result_resource.h  token_resource.cpp  token_resource.h  user_resource.cpp  user_resource.h  user_resources.cpp  user_resources.h  work_resource.cpp  work_resource.h  work_result_resource.cpp  work_result_resource.h
src/server/: CMakeLists.txt  server.cpp  server.h
src/services/: CMakeLists.txt  atc_service.cpp  atc_service.h  cf_service.cpp  cf_service.h
src/utility/: CMakeLists.txt  crypto.cpp  crypto.h  http_exceptions.cpp  http_exceptions.h  json.cpp  json.h  random_functions.cpp  random_functions.h  request.cpp  request.h  str.h  types.h  utility_functions.cpp  utility_functions.h
test/: test_user.py
tests/: auth.py  auth_tg_bot.py  random_functions.py  test_api.py  test_auth_service.py
