add_library(Server STATIC server.cpp)
target_include_directories(Server PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(Server PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../database)
target_include_directories(Server PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../resources)
target_include_directories(Server PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../utility)
target_include_directories(Server PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../services)
